add /authentication route
